i18n: fix element focussing and border alignment, fixes #7960

--- a/public/assets/stylesheets/less/i18n.less
+++ b/public/assets/stylesheets/less/i18n.less
@@ -12,7 +12,7 @@ div.i18n_group {
         position: absolute;
         top: 1px;
         left: 1px;
-        height: 30px;
+        height: 31px;
         overflow: hidden;
         max-width: @max-width;
         z-index: 2;     // stay above ckeditor toolbar
